# live-lesson

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  start.sh  style.css
.cargo/: config
src/: agent.rs  app.rs  camera_encoder.rs  client.rs  config.rs  constants.rs  device_selector.rs  document.rs  encoder_state.rs  home.rs  host.rs  host_manager.rs  inputs.rs  lib.rs  main.rs  microphone_encoder.rs  multi.rs  screen_encoder.rs  sleep.rs  table.rs  utils.rs  video.rs  wrappers.rs
src/components/: home.rs  mod.rs
src/components/common/: battons.rs  mod.rs  video.rs
src/components/document/: document.rs
src/components/editor/: editor.rs
src/components/multi/: client.rs  host.rs  host_manager.rs  mod.rs  multi.rs
src/components/multi/client/: client.rs  client_area.rs  client_manager.rs  host_area.rs  mod.rs  welcome.rs
src/components/multi/draw/: mod.rs  paint.rs
src/components/multi/host/: client_area.rs  client_items.rs  host.rs  host_area.rs  host_manager.rs  mod.rs  welcome.rs
src/components/table/: table.rs
src/crypto/: aes.rs
src/encoders/: camera_encoder.rs  encoder_state.rs  microphone_encoder.rs  mod.rs  screen_encoder.rs
src/media_devices/: media_device_access.rs  media_device_list.rs  mod.rs
src/models/: audio.rs  client.rs  commons.rs  host.rs  mod.rs  packet.rs  video.rs
src/stores/: client_items_store.rs  client_props_store.rs  client_store.rs  host_props_store.rs  host_store.rs  media_store.rs  mod.rs
src/stores/client/: client_props_store.rs  host_props_store.rs  mod.rs
src/utils/: config.rs  device.rs  dom.rs  inputs.rs  mod.rs  models.rs
src/video_tick/: client.rs  footballers_game.rs  host.rs  mod.rs  models.rs  multi_tick.rs
