[package]
name = "live-lesson"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
yew = "0.19"
yew-router = "0.16"
wasm-logger = "0.2"
# web-sys = "0.3"
wasm-bindgen = "0.2.78"
serde = {version = "1", default-features = false }
serde_json = "1.0.72"
wasm-peers = { version = "0.4", default-features = false, features = ["many-to-many"] }
once_cell = "1"
envy = "0.4"
thiserror = "1"
log = "0.4.14"

gloo-timers = "0.2.6"
anyhow = "1"
rand = { version = "0.8.5", features = ["std_rng", "small_rng"] }
cbc = { version = "0.1.2", features = ["alloc"] }
aes = "0.8.3"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
    "AudioTrack",
    "AudioData",
    "AudioEncoder",
    "AudioEncoderInit",
    "AudioEncoderConfig",
    "AudioDecoder",
    "AudioDecoderInit",
    "AudioDecoderConfig",
    "AudioContext",
    "AudioSampleFormat",
    "BaseAudioContext",
    "Document",
    "Element",
    "GainOptions",
    "GainNode",
    "HtmlElement",
    "Node", 
    "Window",
    "Clipboard",
    "console",
    "CodecState",
    "CanvasRenderingContext2d",
    "EncodedAudioChunk",
    "EncodedAudioChunkInit",
    "EncodedAudioChunkType",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "EncodedVideoChunkType",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlSelectElement",
    "LatencyMode",
    "Navigator",
    "MediaStreamAudioDestinationNode",
    "AudioDestinationNode",
    "AudioContextOptions",
    "AudioDataCopyToOptions",
    "MediaDevices",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaTrackConstraints",
    "MediaStream",
    "MediaStreamTrack",
    "MediaTrackSettings",
    "MediaStreamTrackProcessor",
    "MediaStreamTrackProcessorInit",
    "MediaStreamTrackGenerator",
    "MediaStreamTrackGeneratorInit",
    "MediaStreamTrackProcessor",
    "MediaStreamTrackProcessorInit",
    "HtmlVideoElement",
    "MediaStreamConstraints",
    "ReadableStream",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamDefaultReader",
    "VideoEncoder",
    "VideoEncoderInit",
    "VideoEncoderConfig",
    "VideoFrame",
    "VideoTrack",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit",
    "VideoEncoderEncodeOptions",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "MediaStreamAudioSourceNode",
    "HtmlAudioElement",
    "AudioDataInit",
    "TransformStream",
    "OscillatorNode",
    "OscillatorType",
    "AudioParam"
    ] }
