[package]
name = "live-lesson"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
yew = { version = "0.21", features = ["csr"] }
yewdux = "0.9"
yew-router = "0.18"
wasm-logger = "0.2"
# web-sys = "0.3"
wasm-bindgen = "0.2.78"
serde = {version = "1", default-features = false }
serde_json = "1.0.72"
wasm-peers = { path = "../wasm-peers/library"}
once_cell = "1"
envy = "0.4"
thiserror = "1"
log = "0.4.14"

monaco = { path = "../rust-monaco", features = ["yew-components"] }
rmp = "0.8.11"
rmp-serde = "1.1.1"
uuid = { version = "1", features = ["v4", "js"] }
gloo-timers = "0.2.6"
anyhow = "1"
rand = { version = "0.8.5", features = ["std_rng", "small_rng"] }
cbc = { version = "0.1.2", features = ["alloc"] }
aes = "0.8.3"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
    "AudioTrack",
    "AudioData",
    "AudioEncoder",
    "AudioEncoderInit",
    "AudioEncoderConfig",
    "AudioDecoder",
    "AudioDecoderInit",
    "AudioDecoderConfig",
    "AudioContext",
    "AudioSampleFormat",
    "BaseAudioContext",
    "Document",
    "Element",
    "GainOptions",
    "GainNode",
    "HtmlElement",
    "Node", 
    "Window",
    "Clipboard",
    "console",
    "CodecState",
    "CanvasRenderingContext2d",
    "EncodedAudioChunk",
    "EncodedAudioChunkInit",
    "EncodedAudioChunkType",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "EncodedVideoChunkType",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlSelectElement",
    "LatencyMode",
    "Navigator",
    "MediaStreamAudioDestinationNode",
    "AudioDestinationNode",
    "AudioContextOptions",
    "AudioDataCopyToOptions",
    "MediaDevices",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaTrackConstraints",
    "MediaStream",
    "MediaStreamTrack",
    "MediaTrackSettings",
    "MediaStreamTrackProcessor",
    "MediaStreamTrackProcessorInit",
    "MediaStreamTrackGenerator",
    "MediaStreamTrackGeneratorInit",
    "MediaStreamTrackProcessor",
    "MediaStreamTrackProcessorInit",
    "HtmlVideoElement",
    "MediaStreamConstraints",
    "ReadableStream",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamDefaultReader",
    "VideoEncoder",
    "VideoEncoderInit",
    "VideoEncoderConfig",
    "VideoFrame",
    "VideoTrack",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit",
    "VideoEncoderEncodeOptions",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "MediaStreamAudioSourceNode",
    "HtmlAudioElement",
    "AudioDataInit",
    "TransformStream",
    "OscillatorNode",
    "OscillatorType",
    "AudioParam"
    ] }
yew_icons = {version = "0.8", features = [
    "FontAwesomeSolidCode",
    "BootstrapFileEarmarkText",
    "LucideArrowUpCircle",
    "BootstrapCameraVideoFill",
    "BootstrapCameraVideoOffFill",
    "BootstrapMicFill",
    "BootstrapMicMuteFill",
    "FontAwesomeSolidHorseHead",
    "HeroiconsSolidPaintBrush",
    "BootstrapPeople",
    "BootstrapPeopleFill",
    "BootstrapXSquare"
    ]}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
